# shirobrak_action-trello-connector

./: .editorconfig  .env.sample  .gitignore  Dockerfile  LICENSE.md  README.md  action.yaml  entrypoint.sh
.github/workflows/: action_trello_connector.yaml  depup.yaml  dockerimage.yaml  release.yaml  update_semver.yaml
app/: Cargo.toml
app/src/: cli.rs  gateway.rs  main.rs  usecase.rs
app/src/gateway/: github_api.rs  trello_api.rs
app/src/usecase/: interface.rs  on_pr_usecase.rs  on_push_usecase.rs
