[package]
name = "action-trello-connector"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.5"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version = "3.2.17", features = ["derive"] }
